updated column layouts

--- a/index.html
+++ b/index.html
@@ -8,77 +8,32 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="col-12 gx-1">
-    <div class="block green ">
-        <p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p>
+    <div class="container">
+        <div class="row sm">
+            <div class="col-4">
+                <div class="block red">meep</div>
+                <div class="block purple">meep</div>
+            </div>
+            <div class="col-6"><div class="block green">meep</div></div>
+            <div class="col-2"><div class="block blue">meep</div></div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="block yellow">meep</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="block red">meep</div>
+            </div>
+            <div class="col-4">
+                <div class="block blue">meep</div>
+            </div>
+            <div class="col-4">
+                <div class="block green">meep</div>
+            </div>
+        </div>
+
     </div>
-    <div class="block red"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block yellow"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block blue"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block purple"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block orange"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block green ">
-        <p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p>
-    </div>
-    <div class="block red"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block yellow"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block blue"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block purple"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block orange"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-</div>
-<div class="col-9 gx-2">
-    <div class="block green ">
-        <p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p>
-    </div>
-    <div class="block red"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block yellow"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block blue"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block purple"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block orange"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block green ">
-        <p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p>
-    </div>
-    <div class="block red"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block yellow"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block blue"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block purple"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block orange"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-</div>
-<div class="col-6 gx-3">
-    <div class="block green ">
-        <p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p>
-    </div>
-    <div class="block red"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block yellow"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block blue"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block purple"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block orange"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block green ">
-        <p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p>
-    </div>
-    <div class="block red"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block yellow"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block blue"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block purple"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block orange"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-</div>
-<div class="col-3 gx-4">
-    <div class="block green ">
-        <p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p>
-    </div>
-    <div class="block red"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block yellow"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block blue"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block purple"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block orange"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block green ">
-        <p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p>
-    </div>
-    <div class="block red"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block yellow"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block blue"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block purple"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-    <div class="block orange"><p>Lorem ipsum dolor sit amet  <a href="#"> consectetur </a> elit. Maiores non error culpa repellendus cum reiciendis ex voluptates consequatur officiis cumque consectetur ea ab perspiciatis quas, unde atque? Magni, voluptates suscipit.</p></div>
-</div>
 </body>
 </html>
