able to create 12 column grid and change flex size to xs

--- a/index.html
+++ b/index.html
@@ -1,36 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=.0">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <div class="row sm">
-            <div class="col-4">
-                <div class="block red">meep</div>
-                <div class="block purple">meep</div>
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="block red"></div>
+                <div class="block purple"></div>
             </div>
-            <div class="col-6"><div class="block green">meep</div></div>
-            <div class="col-2"><div class="block blue">meep</div></div>
+            <div class="col-xs-1">
+                <div class="block green"></div>
+                <div class="block green"></div>
+            </div>
+            <div class="col-xs-1"><div class="block blue"></div></div>
         </div>
         <div class="row">
-            <div class="col-12">
-                <div class="block yellow">meep</div>
+            <div class="col-6">
+                <div class="block orange"></div>
+            </div>
+            <div class="col-6">
+                <div class="block yellow"></div>
             </div>
         </div>
         <div class="row">
-            <div class="col-4">
-                <div class="block red">meep</div>
+            <div class="col-8">
+                <div class="block red"></div>
+            </div>
+            <div class="col-2">
+                <div class="block blue"></div>
+            </div>
+            <div class="col-2">
+                <div class="block green"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <div class="block purple"></div>
+            </div>
+            <div class="col-2">
+                <div class="block yellow"></div>
+            </div>
+            <div class="col-2">
+                <div class="block purple"></div>
+            </div>
+            <div class="col-2">
+                <div class="block yellow"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <div class="block red"></div>
             </div>
             <div class="col-4">
-                <div class="block blue">meep</div>
+                <div class="block blue"></div>
             </div>
-            <div class="col-4">
-                <div class="block green">meep</div>
+            <div class="col-1">
+                <div class="block green"></div>
+            </div>
+            <div class="col-2">
+                <div class="block yellow"></div>
+            </div>
+            <div class="col-1">
+                <div class="block purple"></div>
+            </div>
+            <div class="col-2">
+                <div class="block orange"></div>
             </div>
         </div>
 
