added sm, md, and lg flex sizes

--- a/index.html
+++ b/index.html
@@ -14,64 +14,64 @@
                 <div class="block red"></div>
                 <div class="block purple"></div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-md-1">
                 <div class="block green"></div>
                 <div class="block green"></div>
             </div>
             <div class="col-xs-1"><div class="block blue"></div></div>
         </div>
         <div class="row">
-            <div class="col-6">
+            <div class="col-lg-6">
                 <div class="block orange"></div>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6">
                 <div class="block yellow"></div>
             </div>
         </div>
         <div class="row">
-            <div class="col-8">
+            <div class="col-md-8">
                 <div class="block red"></div>
             </div>
-            <div class="col-2">
+            <div class="col-md-2">
                 <div class="block blue"></div>
             </div>
-            <div class="col-2">
+            <div class="col-md-2">
                 <div class="block green"></div>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-6">
+            <div class="col-sm-6">
                 <div class="block purple"></div>
             </div>
-            <div class="col-2">
+            <div class="col-md-2">
                 <div class="block yellow"></div>
             </div>
-            <div class="col-2">
+            <div class="col-sm-2">
                 <div class="block purple"></div>
             </div>
-            <div class="col-2">
+            <div class="col-sm-2">
                 <div class="block yellow"></div>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-2">
+            <div class="col-md-2">
                 <div class="block red"></div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
                 <div class="block blue"></div>
             </div>
-            <div class="col-1">
+            <div class="col-md-1">
                 <div class="block green"></div>
             </div>
-            <div class="col-2">
+            <div class="col-md-2">
                 <div class="block yellow"></div>
             </div>
-            <div class="col-1">
+            <div class="col-md-1">
                 <div class="block purple"></div>
             </div>
-            <div class="col-2">
+            <div class="col-md-2">
                 <div class="block orange"></div>
             </div>
         </div>
